--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <head>
-<title>
-CQD: Data Science & AI Solutions
-</title>
+  <title>
+    CQD: Data Science & AI Solutions
+  </title>
 </head>
 <body>
-<div>
-<h2>CQD</h2>
-<h4>Data Science & AI Solutions</h4>
-</div>
+  <div>
+    <h2>CQD</h2>
+    <h4>Data Science & AI Solutions</h4>
+  </div>
+  <div>
+    <div>
+      <a href="https://github.com/cqd-lab" target="_blank">GitHub</a>
+    </div>
+  </div>
 </body>
