--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CQD - Data Science & AI Solutions</title>
+  <title>CQD Lab - Data Science & AI Solutions</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">CQD</a></h1>
+        <h1><a href="index.html">CQD Lab</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -84,7 +84,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to <span>CQD</span></h2>
+          <h2 class="animate__animated animate__fadeInDown">Welcome to <span>CQD Lab</span></h2>
           <p class="animate__animated fanimate__adeInUp">Data Science and AI Solutions made for you, from someone who will let you understand what is happenning.</p>
           <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
         </div>
@@ -906,7 +906,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>CQD</h3>
+      <h3>CQD Lab</h3>
       <p><a href="mailto:cqd.lab@pm.me">CQD.LAB@PM.ME</a></p>
       <!-- <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -916,7 +916,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div> -->
       <div class="copyright">
-        &copy; Copyright <strong><span>CQD</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>CQD Lab</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
