--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     <!-- End Cta Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -381,7 +381,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
