--- a/index.html
+++ b/index.html
@@ -916,12 +916,12 @@
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div> -->
-      <div class="copyright">
+      <!-- <div class="copyright">
         &copy; Copyright <strong><span>CQD Lab</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      </div> -->
     </div>
   </footer>
   <!-- End Footer -->
