--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <!-- End Cta Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="proposta" class="services">
+<!--     <section id="proposta" class="services">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -399,7 +399,7 @@
 
 
       </div>
-    </section>
+    </section> -->
     <!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
