--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <!-- <li><a class="nav-link scrollto" href="#sobre">Sobre</a></li> -->
-          <li><a class="nav-link scrollto" href="#proposta">Proposta</a></li>
+<!--           <li><a class="nav-link scrollto" href="#proposta">Proposta</a></li> -->
           <li><a class="nav-link scrollto" href="#projetos">Projetos</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
           <li><a class="nav-link scrollto" href="#time">Time</a></li>
