--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Endereço:</h4>
-                <p>Brasília-DF</p>
+                <p>Brasília-DF, Brasil</p>
               </div>
 
               <div class="email">
