--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
                   <a href="https://htbrandao.github.io/"><i class="bi bi-house"></i></a>
-                  <a href="https://www.linkedin.com/in/henrique-brand%C3%A3o-259a47134/"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/htbrandao/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -976,3 +976,4 @@
 </body>
 
 </html>
+
