--- a/index.html
+++ b/index.html
@@ -776,15 +776,15 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
-              <div class="member-img">
-                <img src="assets/img/team/brandao.jpg" class="img-fluid" alt="">
+<!--               <div class="member-img"> -->
+<!--                 <img src="assets/img/team/brandao.jpg" class="img-fluid" alt=""> -->
                 <div class="social">
                   <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
                   <a href="https://htbrandao.github.io/"><i class="bi bi-house"></i></a>
                   <a href="https://www.linkedin.com/in/htbrandao/"><i class="bi bi-linkedin"></i></a>
-                </div>
+<!--                 </div> -->
               </div>
               <div class="member-info">
                 <h4>Henrique Brandão</h4>
@@ -976,4 +976,5 @@
 </body>
 
 </html>
+
 
